--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile ('com.googlecode.json-simple:json-simple:1.1.1') {
         exclude(module: 'junit')
     }
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
 }
